clear and check all outputs

--- a/2. Intermediate/Extra - Persistence.ipynb
+++ b/2. Intermediate/Extra - Persistence.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -331,22 +331,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x1045d3c00>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "curs = conn.cursor()\n",
     "try:\n",
@@ -389,22 +378,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "curs.execute('insert into people values (?, ?, ?)', ('Bob', 'dev', 50000))\n",
     "curs.rowcount"
@@ -412,22 +390,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'qmark'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sqlite3.paramstyle"
    ]
@@ -450,22 +417,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "curs.executemany('insert into people values (?, ?, ?)', \n",
     "                     [ ('Sue', 'mus', '70000'),\n",
@@ -484,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -527,24 +483,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Bob', 'dev', 50000)\n",
-      "('Sue', 'mus', 70000)\n",
-      "('Ann', 'mus', 60000)\n",
-      "('Tom', 'mgr', 100000)\n",
-      "('Kim', 'adm', 30000)\n",
-      "('pat', 'dev', 90000)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "curs.execute('select * from people')\n",
     "for row in curs.fetchall():\n",
@@ -562,24 +505,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bob : 50000\n",
-      "Sue : 70000\n",
-      "Ann : 60000\n",
-      "Tom : 100000\n",
-      "Kim : 30000\n",
-      "pat : 90000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "curs.execute('select * from people')\n",
     "for (name, job, pay) in curs.fetchall():\n",
@@ -597,22 +527,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Bob',), ('Sue',), ('Ann',), ('Tom',), ('Kim',), ('pat',)]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "curs.execute('select name from people')\n",
     "names = curs.fetchall()\n",
@@ -636,24 +555,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Bob', 'dev', 50000)\n",
-      "('Sue', 'mus', 70000)\n",
-      "('Ann', 'mus', 60000)\n",
-      "('Tom', 'mgr', 100000)\n",
-      "('Kim', 'adm', 30000)\n",
-      "('pat', 'dev', 90000)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "curs.execute('select * from people')\n",
     "while True:\n",
@@ -665,24 +571,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Bob', 'dev', 50000)\n",
-      "('Sue', 'mus', 70000)\n",
-      "('Ann', 'mus', 60000)\n",
-      "('Tom', 'mgr', 100000)\n",
-      "('Kim', 'adm', 30000)\n",
-      "('pat', 'dev', 90000)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "curs.execute('select * from people')\n",
     "for row in curs:\n",
@@ -700,24 +593,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Bob', 'dev', 50000)\n",
-      "('Sue', 'mus', 70000)\n",
-      "('Ann', 'mus', 60000)\n",
-      "('Tom', 'mgr', 100000)\n",
-      "('Kim', 'adm', 30000)\n",
-      "('pat', 'dev', 90000)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "curs.execute('select * from people')\n",
     "while True:\n",
@@ -737,66 +617,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(('name', None, None, None, None, None, None),\n",
-       " ('job', None, None, None, None, None, None),\n",
-       " ('pay', None, None, None, None, None, None))"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "curs.description"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "------------------------------\n",
-      "name => Bob\n",
-      "job => dev\n",
-      "pay => 50000\n",
-      "------------------------------\n",
-      "name => Sue\n",
-      "job => mus\n",
-      "pay => 70000\n",
-      "------------------------------\n",
-      "name => Ann\n",
-      "job => mus\n",
-      "pay => 60000\n",
-      "------------------------------\n",
-      "name => Tom\n",
-      "job => mgr\n",
-      "pay => 100000\n",
-      "------------------------------\n",
-      "name => Kim\n",
-      "job => adm\n",
-      "pay => 30000\n",
-      "------------------------------\n",
-      "name => pat\n",
-      "job => dev\n",
-      "pay => 90000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "curs.execute('select * from people')\n",
     "colnames = [desc[0] for desc in curs.description]\n",
@@ -854,50 +690,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bob,devel,50000\r",
-      "\r\n",
-      "sue,music,60000\r",
-      "\r\n",
-      "ann,devel,40000\r",
-      "\r\n",
-      "tim,admin,30000\r",
-      "\r\n",
-      "kim,devel,60000"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!cat data/data.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bob,developer,80000\r",
-      "\r\n",
-      "sue,music,90000\r",
-      "\r\n",
-      "ann,manager,80000"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!cat data/data2.txt"
    ]
@@ -905,7 +713,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -919,9 +727,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
