--- a/index.ipynb
+++ b/index.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![Banner PyCon 2022](./banner_pycon22.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Choose your language | Seleziona la lingua\n",
     "\n",
     "- [English 🇬🇧](./Live_Coding_EN.ipynb)\n",
