Code snippet in Bonus Track

--- a/Live_Coding.ipynb
+++ b/Live_Coding.ipynb
@@ -140,12 +140,38 @@
    "source": [
     "### Bonus track Visualizzare i Pokemon\n",
     "\n",
+    "Concetti di teoria correlati:\n",
+    "- `list comprehension`\n",
+    "\n",
+    "Se sei sul tuo Jupyter notebook usa il seguente snippet di codice: \n",
+    "\n",
     "```\n",
     "images_paths = [ f\"resized/{pokemon_dataset[p[0]][0]}.jpg\" for p in l ]\n",
     "print(images_paths)\n",
+    "\n",
     "import ipyplot\n",
     "\n",
     "ipyplot.plot_images(images_paths, labels=[ pokemon_dataset[p[0]][1] for p in l ], max_images=5, img_width=150)\n",
+    "```\n",
+    "\n",
+    "Se sei su Google Colab invece:\n",
+    "```\n",
+    "!pip install ipyplot\n",
+    "import os\n",
+    "import ipyplot\n",
+    "\n",
+    "images_paths = [ os.path.abspath(f\"resized/{pokemon_dataset[p[0]][0]}.jpg\") for p in l ]\n",
+    "\n",
+    "\n",
+    "ipyplot.plot_images(\n",
+    "    images_paths, \n",
+    "    labels=[ pokemon_dataset[p[0]][1] for p in l ], \n",
+    "    max_images=5, \n",
+    "    img_width=150, \n",
+    "    force_b64=True,\n",
+    "    show_url=False\n",
+    ")\n",
+    "\n",
     "```"
    ]
   },
