--- a/Live_Coding_EN.ipynb
+++ b/Live_Coding_EN.ipynb
@@ -152,6 +152,26 @@
     "import ipyplot\n",
     "\n",
     "ipyplot.plot_images(images_paths, labels=[ pokemon_dataset[p[0]][1] for p in l ], max_images=5, img_width=150)\n",
+    "```\n",
+    "\n",
+    "If you're using Google Colab:\n",
+    "```\n",
+    "!pip install ipyplot\n",
+    "import os\n",
+    "import ipyplot\n",
+    "\n",
+    "images_paths = [ os.path.abspath(f\"resized/{pokemon_dataset[p[0]][0]}.jpg\") for p in l ]\n",
+    "\n",
+    "\n",
+    "ipyplot.plot_images(\n",
+    "    images_paths, \n",
+    "    labels=[ pokemon_dataset[p[0]][1] for p in l ], \n",
+    "    max_images=5, \n",
+    "    img_width=150, \n",
+    "    force_b64=True,\n",
+    "    show_url=False\n",
+    ")\n",
+    "\n",
     "```"
    ]
   },
