removed ipyplot dependecy

--- a/Live_Coding_EN.ipynb
+++ b/Live_Coding_EN.ipynb
@@ -145,33 +145,15 @@
     "\n",
     "Code snippet to use: \n",
     "\n",
-    "```\n",
-    "images_paths = [ f\"resized/{pokemon_dataset[p[0]][0]}.jpg\" for p in l ]\n",
-    "print(images_paths)\n",
+    "```python\n",
+    "from IPython.display import Image\n",
     "\n",
-    "import ipyplot\n",
-    "\n",
-    "ipyplot.plot_images(images_paths, labels=[ pokemon_dataset[p[0]][1] for p in l ], max_images=5, img_width=150)\n",
-    "```\n",
-    "\n",
-    "If you're using Google Colab:\n",
-    "```\n",
-    "!pip install ipyplot\n",
-    "import os\n",
-    "import ipyplot\n",
-    "\n",
-    "images_paths = [ os.path.abspath(f\"resized/{pokemon_dataset[p[0]][0]}.jpg\") for p in l ]\n",
-    "\n",
-    "\n",
-    "ipyplot.plot_images(\n",
-    "    images_paths, \n",
-    "    labels=[ pokemon_dataset[p[0]][1] for p in l ], \n",
-    "    max_images=5, \n",
-    "    img_width=150, \n",
-    "    force_b64=True,\n",
-    "    show_url=False\n",
-    ")\n",
-    "\n",
+    "for n,p in enumerate(best_pokemon):\n",
+    "    print('-'*50)\n",
+    "    print(n+1)\n",
+    "    print(pokemon_dataset[p[0]][1])\n",
+    "    display(Image(f\"resized/{pokemon_dataset[p[0]][0]}.jpg\")),\n",
+    "    print('-'*50)\n",
     "```"
    ]
   },
