fixed typo in bonus part

--- a/Live_Coding.ipynb
+++ b/Live_Coding.ipynb
@@ -152,7 +152,7 @@
     "    print('-'*50)\n",
     "    print(n+1)\n",
     "    print(pokemon_dataset[p[0]][1])\n",
-    "    display(Image(f\"resized/{pokemon_dataset[p[0]][0]}.jpg\")),\n",
+    "    display(Image(f\"resized/{pokemon_dataset[n][0]}.jpg\")),\n",
     "    print('-'*50)\n",
     "```"
    ]
